# website_tracker_chrome_extension

./: .cursorrules  .gitignore  Makefile  README.md  SETUP_GUIDE.md
backend/: .env.example  README.md  install-python.sh  main.py  migrate.sh  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  website_tracker.db
backend/__tests__/: conftest.py  test_database.py  test_tracked_sites_router.py  test_usage_router.py
backend/__tests__/domain/: __init__.py  test_tracked_sites_service.py  test_usage_service.py
backend/__tests__/infrastructure/: __init__.py  test_tracked_sites_repository_impl.py  test_usage_repository_impl.py
backend/website_tracker_backend/: __init__.py  __main__.py  app.py
backend/website_tracker_backend/application/: __init__.py  dependencies.py  schemas.py
backend/website_tracker_backend/application/routers/: __init__.py  tracked_sites.py  usage.py
backend/website_tracker_backend/domain/: __init__.py
backend/website_tracker_backend/domain/interfaces/: __init__.py  tracked_sites_repository.py  usage_repository.py  user_repository.py
backend/website_tracker_backend/domain/services/: __init__.py  tracked_sites_service.py  usage_service.py
backend/website_tracker_backend/infrastructure/: __init__.py
backend/website_tracker_backend/infrastructure/adapters/: __init__.py  tracked_sites_repository_impl.py  usage_repository_impl.py  user_repository_impl.py
backend/website_tracker_backend/infrastructure/database/: __init__.py  connection.py  migrate.py  models.py
docs/: authentication.md  oauth2-implementation-plan.md
(+61 files in other folders)
