[project]
name = "website-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for Website Time Tracker Chrome Extension"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.3",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["website_tracker_backend"]

